# isabelle-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.claude/: .gitignore  README.md  settings.json
.claude/agents/: kernel-reviewer.md  port-reviewer.md  theory-parser.md
.claude/commands/: audit.md  bench.md  fix.md  verify-all.md
.claude/hooks/: README.md  post-session.md
.claude/rules/: README.md  api-design.md  ci-cd.md  code-quality.md  concurrency.md  documentation.md  error-handling.md  isar.md  iterative.md  kernel.md  next-phase.md  performance.md  phase-sop.md  proof-methods.md  property-testing.md  refactoring.md  release.md  security.md  testing.md  theory-loading.md  type-system.md
.claude/skills/: SKILL.md  add-isar-command.md  add-method.md  audit-kernel.md  bench.md  build-theory.md  debug-overflow.md  port-isabelle.md  refactor.md  release.md  run-isabelle-rs.md  search-db.md  skills.toml  sync-docs.md  verify.md
.claude/skills/run-isabelle-rs/: SKILL.md  driver.sh
.claude/templates/: phase-plan-template.md  rule-template.md  skill-template.md
.github/workflows/: ci.yml  release.yml
benches/: kernel_benchmarks.rs
docs/: ADR-0001-kernel-core-rewrite.md  ADR-0002-layered-platform-architecture.md  ARCHITECTURE.md  ARCHITECTURE_V3.md  BASELINE.md  COMPAT_CALLSITES.md  DEVELOPMENT.md  GAP_ANALYSIS.md  HPC_SYMBOLIC_COMPUTE_DESIGN.md  ISABELLE_COMPARISON.md  KERNEL_ATTACK_TESTS.md  KERNEL_PRIMITIVES.md  KERNEL_RULES.md  MIGRATION.md  PROJECT_STATUS.md  RESOLUTION_DESIGN.md  ROADMAP.md  SESSION_TRANSFER.md  SESSION_TRANSFER_v1.9.0.md  TRUST.md
scripts/: README.md  check-kernel-firewall.sh  check-strict-kernel.sh  install.ps1  install.sh
src/: lib.rs  main.rs
src/core/: arena.rs  axclass.rs  bires.rs  conjunction.rs  consts.rs  context.rs  conv.rs  drule.rs  envir.rs  error.rs  facts.rs  global_theory.rs  logic.rs  mod.rs  more_thm.rs  morphism.rs  name.rs  net.rs  pattern.rs  proofterm.rs  sign.rs  simplifier.rs  sorts.rs  tactic.rs  term.rs  term_ord.rs  term_subst.rs  theory.rs  thm.rs  type_infer.rs  types.rs  unify.rs  variable.rs
src/document/: document.rs  mod.rs
src/fleche/: engine.rs  mod.rs
src/hol/: axclass.rs  bnf_lfp.rs  class_system.rs  ctr_sugar.rs  defs.rs  function.rs  hol_consts.rs  hol_loader.rs  hol_rules.rs  hol_theorems.rs  hologic.rs  inductive.rs  inductive_set.rs  locale.rs  mod.rs  primcorec.rs  simpdata.rs  term_builder.rs  theory_db.rs  theory_graph.rs  transfer.rs  typedef_record.rs
src/isar/: args.rs  attrib.rs  debug_tests.rs  diag.rs  hol_diag.rs  keyword.rs  linarith.rs  method.rs  mod.rs  outer_syntax.rs  parse.rs  proof.rs  proof_context.rs  proof_state.rs  rule_cases.rs  spec.rs  term_parser.rs  token.rs  toplevel.rs
src/kernel/: arena.rs  context.rs  cterm.rs  data.rs  derivation.rs  derived.rs  invariant.rs  mod.rs  name.rs  rules.rs  search_fact.rs  signature.rs  term.rs  theory.rs  thm.rs  typ.rs  unify.rs
src/lsp/: mod.rs  router.rs
src/lsp/handlers/: completion.rs  definition.rs  document.rs  hover.rs  lifecycle.rs  mod.rs  proof_goals.rs  symbols.rs
src/server/: handler.rs  isabelle_ext.rs  lsp_types.rs  mod.rs  transport.rs
src/session/: file_worker.rs  mod.rs  session.rs  watchdog.rs
src/syntax/: ast.rs  mod.rs  parser.rs  printer.rs  syntax_phases.rs
src/theory/: cache.rs  loader.rs  local_theory.rs  mod.rs  registry.rs  session_builder.rs  thy_header.rs  verify_classifier.rs
src/tools/: auto.rs  blast.rs  meson.rs  metis.rs  mod.rs  reconstruct.rs  simp.rs  sledgehammer.rs  tptp.rs
src/wasm/: host.rs  mod.rs  runtime.rs  sdk.rs
tests/: batch_verify.rs  bnf_tests.rs  comprehensive.rs  fast_verify.rs  integration_tests.rs  kernel_rewrite_soundness.rs  kernel_soundness.rs  one_by_one.rs  proptest.proptest-regressions  proptest.rs  quick_verify.rs  single_verify.rs  sledgehammer_e2e.rs  tier2_verify.rs  tier3_verify.rs
