[package]
name = "isabelle-rs"
version = "2.1.1"
edition = "2024"
description = "Isabelle proof assistant kernel and Isar proof engine, rewritten in Rust. 27 proof methods (including Metis, Meson), Route A stability-first: hologic + simpdata + args + spec + attribute system + Tier2 verification."
license = "Apache-2.0"
repository = "https://github.com/MCB-SMART-BOY/isabelle-rs"
documentation = "https://docs.rs/isabelle-rs"
readme = "README.md"
keywords = ["isabelle", "theorem-prover", "proof-assistant", "lcf", "hol"]
categories = ["science", "development-tools"]
exclude = [
    "isabelle-source/**",
    "target/**",
    ".rules/**",
    ".git/**",
    "*.bak",
]

[features]
default = []
# LSP server support
lsp = []
# WASM plugin support
wasm = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "io-util", "io-std"] }
rowan = "0.15"
wasmtime = "29"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
bincode = "1"
sha2 = "0.10"
proptest = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "kernel_benchmarks"
harness = false

[[bin]]
name = "isabelle-rs"
path = "src/main.rs"

[[bin]]
name = "isabelle-build"
path = "src/bin/isabelle-build.rs"
